pseudo class applied on <button> tag

--- a/pseudoclasses/index.html
+++ b/pseudoclasses/index.html
@@ -26,6 +26,16 @@
         {
             color: gray;
         }
+
+        /* button-pseudo class
+           button can be displayed in different ways on applying pseudo property */
+
+        /* button:hover;Applied when the user hovers over the button with the mouse.  */
+        /* jab button ke uper hover krnge then uske upper padding 10px apply hoga */
+        button:hover
+       {
+        padding: 10px;
+       }
     </style>
 </head>
 
@@ -39,6 +49,8 @@
                                 }  -->
     <!-- anchor tag with google link -->
     <a href="http://google.com/"> Link</a>
+  <!-- button -->
+    <button>Click Me</button>
 </body>
 
 </html>
